--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -165,3 +165,9 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.wuxiaowei.interviewconqueror.controller
+# 热 key 探测
+hotkey:
+  app-name: interview-conqueror
+  caffeine-size: 10000
+  push-period: 1000
+  etcd-server: http://localhost:2379
